@@ -100,6 +100,9 @@ Release 2.0.5-beta - UNRELEASED
     filecache sub-directory under application directory. (Omkar Vinit Joshi via
     vinodkv)
 
+    YARN-581. Added a test to verify that app delegation tokens are restored
+    after RM restart. (Jian He via vinodkv)
+
   OPTIMIZATIONS
 
   BUG FIXES
